# VIW-Fusion

./: .gitignore  README.md
camera_models/: CMakeLists.txt  package.xml
config/: vins_rviz_config.rviz
config/OpenORIS/: d400_mono_imu_config.yaml  d400_mono_imu_wheel_config.yaml  market_mono_imu_wheel_config.yaml
config/euroc/: euroc_stereo_imu_config.yaml
config/realsense_d435i/: d435_left.yaml  d435i_mono_imu_config.yaml  d435i_mono_imu_wheel_config.yaml
global_fusion/: CMakeLists.txt  package.xml
global_fusion/src/: globalOpt.cpp  globalOpt.h  globalOptNode.cpp
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/src/: keyframe.cpp  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
output/: extrinsic_parameter.csv  vio.csv  vio_loop.csv
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp  rosNodeTestWheel.cpp  rosNodeTestWheelGazebo.cpp  simulationTest.cpp
vins_estimator/src/estimator/: eskf.cpp  eskf.h  estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  plane_factor.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.h  wheel_factor.h  wheel_integration_base.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h
vins_estimator/src/tool/: bagwriter.cpp  gps_adapter.cpp  gps_adapter.h
vins_estimator/src/utility/: CameraPoseVisualization.h  utility.h  visualization.cpp  visualization.h
